refactor: apply stash

--- a/tests/Disaggregation_test.ipynb
+++ b/tests/Disaggregation_test.ipynb
@@ -3124,9 +3124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_obs_hourly = pd.read_csv('data_obs_hourly.csv', index_col=0, parse_dates=True)\n",
-    "data_obs_daily = ts.read('data_obs_daily.csv')\n",
-    "plot_period = slice('2014-07-01', '2014-07-05')"
+    "data_obs_hourly = pd.read_csv(\"data_obs_hourly.csv\", index_col=0, parse_dates=True)\n",
+    "data_obs_daily = ts.read(\"data_obs_daily.csv\")\n",
+    "plot_period = slice(\"2014-07-01\", \"2014-07-05\")"
    ]
   },
   {
@@ -3406,10 +3406,10 @@
    "source": [
     "tempdf_mettoolbox = pd.DataFrame()\n",
     "plt.plot(data_obs_hourly[\"temp\"].loc[plot_period])\n",
-    "temp_methods = [\"sine_min_max\", \"sine_mean\",\"mean_course_mean\",\"mean_course_min_max\"]\n",
+    "temp_methods = [\"sine_min_max\", \"sine_mean\", \"mean_course_mean\", \"mean_course_min_max\"]\n",
     "for method in temp_methods:\n",
     "    print(method)\n",
-    "    if method in [\"sine_min_max\",\"sine_mean\"]:\n",
+    "    if method in [\"sine_min_max\", \"sine_mean\"]:\n",
     "        tempdf_mettoolbox[method] = met.disaggregate.temperature(\n",
     "            input_ts=data_obs_daily,\n",
     "            temp_min_col=2,\n",
@@ -3423,7 +3423,7 @@
     "            max_delta=False,\n",
     "        )\n",
     "        plt.plot(tempdf_mettoolbox[method].loc[plot_period], \"--\")\n",
-    "        tempdf_mettoolbox[method+'_shift'] = met.disaggregate.temperature(\n",
+    "        tempdf_mettoolbox[method + \"_shift\"] = met.disaggregate.temperature(\n",
     "            input_ts=data_obs_daily,\n",
     "            temp_min_col=2,\n",
     "            temp_max_col=3,\n",
@@ -3435,7 +3435,7 @@
     "            lon=8.86,\n",
     "            hourly=\"data_obs_hourly_temp.csv\",\n",
     "            max_delta=False,\n",
-    "        )    \n",
+    "        )\n",
     "        plt.plot(tempdf_mettoolbox[method].loc[plot_period], \"--\")\n",
     "    else:\n",
     "        tempdf_mettoolbox[method] = met.disaggregate.temperature(\n",
@@ -3452,7 +3452,7 @@
     "        )\n",
     "        plt.plot(tempdf_mettoolbox[method].loc[plot_period], \"--\")\n",
     "plt.legend([\"Observations\"] + list(tempdf_mettoolbox.columns))\n",
-    "plt.ylabel('Temperature [K]')"
+    "plt.ylabel(\"Temperature [K]\")"
    ]
   },
   {
@@ -3749,7 +3749,7 @@
     }
    ],
    "source": [
-    "tempdf_mettoolbox.iloc[0:20,:]"
+    "tempdf_mettoolbox.iloc[0:20, :]"
    ]
   },
   {
@@ -3815,7 +3815,7 @@
     "\n",
     "\n",
     "plt.legend([\"Observations\"] + wind_methods)\n",
-    "plt.ylabel('Wind speed [m/s]')"
+    "plt.ylabel(\"Wind speed [m/s]\")"
    ]
   }
  ],
