refactor: finish pyproject.toml

--- a/tests/Disaggregation_test.ipynb
+++ b/tests/Disaggregation_test.ipynb
@@ -3896,118 +3896,125 @@
     }
    ],
    "source": [
-    "humiditydf_mettoolbox=pd.DataFrame()\n",
-    "humiditydf_mettoolbox['equal'] = met.disaggregate.humidity(\n",
+    "humiditydf_mettoolbox = pd.DataFrame()\n",
+    "humiditydf_mettoolbox[\"equal\"] = met.disaggregate.humidity(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='equal',\n",
+    "    method=\"equal\",\n",
     "    hum_mean_col=6,\n",
-    "    source_units=['dimensionless']\n",
+    "    source_units=[\"dimensionless\"],\n",
     ")\n",
-    "humiditydf_mettoolbox['minimal'] = met.disaggregate.humidity(\n",
+    "humiditydf_mettoolbox[\"minimal\"] = met.disaggregate.humidity(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='minimal',\n",
+    "    method=\"minimal\",\n",
     "    temp_min_col=2,\n",
-    "    source_units=['degK'],\n",
-    "    target_units=['degK'], #this is expecting degK    \n",
-    "    hourly_temp=\"data_obs_hourly_temp.csv\"\n",
-    ")\n",
-    "humiditydf_mettoolbox['minimal_preserve'] = met.disaggregate.humidity(\n",
-    "    input_ts=data_obs_daily,method='minimal',\n",
-    "    temp_min_col=2,\n",
-    "    source_units=['dimensionless','dimensionless'],\n",
+    "    source_units=[\"degK\"],\n",
+    "    target_units=[\"degK\"],  # this is expecting degK\n",
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
-    "    preserve_daily_mean=6\n",
     ")\n",
-    "humiditydf_mettoolbox['min_max'] = met.disaggregate.humidity(\n",
+    "humiditydf_mettoolbox[\"minimal_preserve\"] = met.disaggregate.humidity(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='min_max',\n",
+    "    method=\"minimal\",\n",
+    "    temp_min_col=2,\n",
+    "    source_units=[\"dimensionless\", \"dimensionless\"],\n",
+    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
+    "    preserve_daily_mean=6,\n",
+    ")\n",
+    "humiditydf_mettoolbox[\"min_max\"] = met.disaggregate.humidity(\n",
+    "    input_ts=data_obs_daily,\n",
+    "    method=\"min_max\",\n",
     "    temp_min_col=2,\n",
     "    temp_max_col=3,\n",
     "    hum_min_col=7,\n",
     "    hum_max_col=8,\n",
-    "    source_units=['dimensionless','dimensionless','dimensionless','dimensionless'],\n",
-    "    hourly_temp=\"data_obs_hourly_temp.csv\"\n",
+    "    source_units=[\"dimensionless\", \"dimensionless\", \"dimensionless\", \"dimensionless\"],\n",
+    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     ")\n",
-    "humiditydf_mettoolbox['min_max_preserve'] = met.disaggregate.humidity(\n",
+    "humiditydf_mettoolbox[\"min_max_preserve\"] = met.disaggregate.humidity(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='min_max',\n",
+    "    method=\"min_max\",\n",
     "    temp_min_col=2,\n",
     "    temp_max_col=3,\n",
     "    hum_min_col=7,\n",
     "    hum_max_col=8,\n",
-    "    source_units=['dimensionless','dimensionless','dimensionless','dimensionless','dimensionless'],\n",
+    "    source_units=[\n",
+    "        \"dimensionless\",\n",
+    "        \"dimensionless\",\n",
+    "        \"dimensionless\",\n",
+    "        \"dimensionless\",\n",
+    "        \"dimensionless\",\n",
+    "    ],\n",
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
-    "    preserve_daily_mean=6\n",
+    "    preserve_daily_mean=6,\n",
     ")\n",
-    "humiditydf_mettoolbox['dewpoint_regression'] = met.disaggregate.humidity(\n",
+    "humiditydf_mettoolbox[\"dewpoint_regression\"] = met.disaggregate.humidity(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='dewpoint_regression',\n",
+    "    method=\"dewpoint_regression\",\n",
     "    temp_min_col=2,\n",
-    "    source_units=['degK'],\n",
-    "    target_units=['degK'], #this is expecting degK\n",
+    "    source_units=[\"degK\"],\n",
+    "    target_units=[\"degK\"],  # this is expecting degK\n",
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     "    a0=0,\n",
     "    a1=1,\n",
     ")\n",
-    "humiditydf_mettoolbox['dewpoint_regression_preserve'] = met.disaggregate.humidity(\n",
-    "    input_ts=data_obs_daily, \n",
-    "    method='dewpoint_regression', \n",
+    "humiditydf_mettoolbox[\"dewpoint_regression_preserve\"] = met.disaggregate.humidity(\n",
+    "    input_ts=data_obs_daily,\n",
+    "    method=\"dewpoint_regression\",\n",
     "    temp_min_col=2,\n",
-    "    source_units=['dimensionless','dimensionless'],\n",
+    "    source_units=[\"dimensionless\", \"dimensionless\"],\n",
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     "    a0=0,\n",
     "    a1=1,\n",
-    "    preserve_daily_mean=6\n",
+    "    preserve_daily_mean=6,\n",
     ")\n",
-    "humiditydf_mettoolbox['linear_dewpoint_variation'] = met.disaggregate.humidity(\n",
-    "    input_ts=data_obs_daily, \n",
-    "    method='linear_dewpoint_variation', \n",
+    "humiditydf_mettoolbox[\"linear_dewpoint_variation\"] = met.disaggregate.humidity(\n",
+    "    input_ts=data_obs_daily,\n",
+    "    method=\"linear_dewpoint_variation\",\n",
     "    temp_min_col=2,\n",
-    "    source_units=['degK'],\n",
-    "    target_units=['degK'], #this is expecting degK\n",
-    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
-    "    a0=0,\n",
-    "    a1=1,\n",
-    "    kr=6\n",
-    ")\n",
-    "humiditydf_mettoolbox['linear_dewpoint_variation_preserve'] = met.disaggregate.humidity(\n",
-    "    input_ts=data_obs_daily, \n",
-    "    method='linear_dewpoint_variation', \n",
-    "    temp_min_col=2,\n",
-    "    source_units=['dimensionless','dimensionless'],\n",
+    "    source_units=[\"degK\"],\n",
+    "    target_units=[\"degK\"],  # this is expecting degK\n",
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     "    a0=0,\n",
     "    a1=1,\n",
     "    kr=6,\n",
-    "    preserve_daily_mean=6\n",
     ")\n",
-    "humiditydf_mettoolbox['month_hour_precip_mean'] = met.disaggregate.humidity(\n",
-    "    input_ts=data_obs_daily, \n",
-    "    method='month_hour_precip_mean', \n",
+    "humiditydf_mettoolbox[\"linear_dewpoint_variation_preserve\"] = met.disaggregate.humidity(\n",
+    "    input_ts=data_obs_daily,\n",
+    "    method=\"linear_dewpoint_variation\",\n",
+    "    temp_min_col=2,\n",
+    "    source_units=[\"dimensionless\", \"dimensionless\"],\n",
+    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
+    "    a0=0,\n",
+    "    a1=1,\n",
+    "    kr=6,\n",
+    "    preserve_daily_mean=6,\n",
+    ")\n",
+    "humiditydf_mettoolbox[\"month_hour_precip_mean\"] = met.disaggregate.humidity(\n",
+    "    input_ts=data_obs_daily,\n",
+    "    method=\"month_hour_precip_mean\",\n",
     "    precip_col=4,\n",
-    "    source_units=['dimensionless'],\n",
+    "    source_units=[\"dimensionless\"],\n",
     "    hourly_precip_hum=\"data_obs_hourly_precip_hum.csv\",\n",
     ")\n",
-    "humiditydf_mettoolbox['month_hour_precip_mean_preserve'] = met.disaggregate.humidity(\n",
-    "    input_ts=data_obs_daily, \n",
-    "    method='month_hour_precip_mean',\n",
+    "humiditydf_mettoolbox[\"month_hour_precip_mean_preserve\"] = met.disaggregate.humidity(\n",
+    "    input_ts=data_obs_daily,\n",
+    "    method=\"month_hour_precip_mean\",\n",
     "    precip_col=4,\n",
-    "    source_units=['dimensionless','dimensionless'],\n",
+    "    source_units=[\"dimensionless\", \"dimensionless\"],\n",
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     "    hourly_precip_hum=\"data_obs_hourly_precip_hum.csv\",\n",
-    "    preserve_daily_mean=6\n",
+    "    preserve_daily_mean=6,\n",
     ")\n",
     "\n",
     "\n",
     "methods = humiditydf_mettoolbox.columns\n",
-    "plt.plot(data_obs_hourly[\"hum\"].loc[plot_period],'-',linewidth=3)\n",
+    "plt.plot(data_obs_hourly[\"hum\"].loc[plot_period], \"-\", linewidth=3)\n",
     "\n",
     "for method in methods:\n",
-    "    if 'preserve' in method:\n",
-    "        plt.plot(humiditydf_mettoolbox[method].dropna().loc[plot_period],':')\n",
+    "    if \"preserve\" in method:\n",
+    "        plt.plot(humiditydf_mettoolbox[method].dropna().loc[plot_period], \":\")\n",
     "    else:\n",
-    "        plt.plot(humiditydf_mettoolbox[method].dropna().loc[plot_period],'--')\n",
-    "plt.legend(['Observation']+list(methods),bbox_to_anchor=(1, 1))"
+    "        plt.plot(humiditydf_mettoolbox[method].dropna().loc[plot_period], \"--\")\n",
+    "plt.legend([\"Observation\"] + list(methods), bbox_to_anchor=(1, 1))"
    ]
   },
   {
