build: misc build, ci, and refactoring

--- a/tests/Disaggregation_test.ipynb
+++ b/tests/Disaggregation_test.ipynb
@@ -51,11 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jday=data_obs_daily.index.dayofyear.values\n",
-    "dec = 0.409*np.sin(2.0*np.pi*jday/365.0 - 1.39)\n",
-    "lrad = latitude*np.pi/180.0\n",
-    "s = np.arccos(-np.tan(dec)*np.tan(lrad))\n",
-    "data_obs_daily['ssd'] = 24.*s/np.pi"
+    "jday = data_obs_daily.index.dayofyear.values\n",
+    "dec = 0.409 * np.sin(2.0 * np.pi * jday / 365.0 - 1.39)\n",
+    "lrad = latitude * np.pi / 180.0\n",
+    "s = np.arccos(-np.tan(dec) * np.tan(lrad))\n",
+    "data_obs_daily[\"ssd\"] = 24.0 * s / np.pi"
    ]
   },
   {
@@ -66,80 +66,86 @@
    "outputs": [],
    "source": [
     "def hourly_rso(latitude=None, longitude=None, jday=None, jhour=None):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Calculate rso in MJ m-2 hour-1\n",
-    "    '''\n",
-    "    #latitude = station.Latitude[0]\n",
-    "    #longitude = station.Longitude[0]\n",
-    "    #jday = temp_ts_hr.index.dayofyear.values\n",
-    "    #jhour = temp_ts_hr.index.hour.values\n",
-    "    #jdays=1.5\n",
-    "    #jday=np.floor(jdays)\n",
-    "    #jhour=(jdays-jday)*24\n",
-    "    #latitude=28.8025\n",
-    "    #longitude=-81.5    \n",
+    "    \"\"\"\n",
+    "    # latitude = station.Latitude[0]\n",
+    "    # longitude = station.Longitude[0]\n",
+    "    # jday = temp_ts_hr.index.dayofyear.values\n",
+    "    # jhour = temp_ts_hr.index.hour.values\n",
+    "    # jdays=1.5\n",
+    "    # jday=np.floor(jdays)\n",
+    "    # jhour=(jdays-jday)*24\n",
+    "    # latitude=28.8025\n",
+    "    # longitude=-81.5\n",
     "    # 'Roll-out' the distribution from day to day.\n",
-    "    #jday = np.arange(1, 367)\n",
+    "    # jday = np.arange(1, 367)\n",
     "\n",
-    "    #the solar declination\n",
-    "    dec = 0.409*np.sin(2.0*np.pi*jday/365.0 - 1.39)\n",
-    "    #print(dec)\n",
-    "    lrad = latitude*np.pi/180.0\n",
-    "    #print(lrad)\n",
-    "    #sunset hour angle\n",
-    "    s = np.arccos(-np.tan(dec)*np.tan(lrad))\n",
-    "    #t standard clock time at the midpoint of the period [hour]. For example for a period between 14.00 and 15.00 hours, t = 14.5,\n",
-    "    t = jhour + .5\n",
+    "    # the solar declination\n",
+    "    dec = 0.409 * np.sin(2.0 * np.pi * jday / 365.0 - 1.39)\n",
+    "    # print(dec)\n",
+    "    lrad = latitude * np.pi / 180.0\n",
+    "    # print(lrad)\n",
+    "    # sunset hour angle\n",
+    "    s = np.arccos(-np.tan(dec) * np.tan(lrad))\n",
+    "    # t standard clock time at the midpoint of the period [hour]. For example for a period between 14.00 and 15.00 hours, t = 14.5,\n",
+    "    t = jhour + 0.5\n",
     "    t1 = 1.0\n",
-    "    #Lz longitude of the centre of the local time zone [degrees west of Greenwich]. For example, Lz = 75, 90, 105 and 120° for the Eastern, Central, Rocky Mountain and Pacific time zones (United States)\n",
-    "    if (abs(longitude)<=7):\n",
-    "        Lz = 0.\n",
-    "    elif (abs(longitude)>7) & (abs(longitude)<=23):\n",
-    "        Lz = 15.        \n",
-    "    elif (abs(longitude)>23) & (abs(longitude)<=37):\n",
-    "        Lz = 30.\n",
-    "    elif (abs(longitude)>37) & (abs(longitude)<=53):\n",
-    "        Lz = 45.\n",
-    "    elif (abs(longitude)>53) & (abs(longitude)<=67):\n",
-    "        Lz = 60.\n",
-    "    elif (abs(longitude)>67) & (abs(longitude)<=83):\n",
-    "        Lz = 75. \n",
-    "    elif (abs(longitude)>83) & (abs(longitude)<=97):\n",
-    "        Lz = 90. \n",
-    "    elif (abs(longitude)>97) & (abs(longitude)<=113):\n",
-    "        Lz = 105. \n",
-    "    elif (abs(longitude)>113) & (abs(longitude)<=127):\n",
-    "        Lz = 120.  \n",
+    "    # Lz longitude of the centre of the local time zone [degrees west of Greenwich]. For example, Lz = 75, 90, 105 and 120° for the Eastern, Central, Rocky Mountain and Pacific time zones (United States)\n",
+    "    if abs(longitude) <= 7:\n",
+    "        Lz = 0.0\n",
+    "    elif (abs(longitude) > 7) & (abs(longitude) <= 23):\n",
+    "        Lz = 15.0\n",
+    "    elif (abs(longitude) > 23) & (abs(longitude) <= 37):\n",
+    "        Lz = 30.0\n",
+    "    elif (abs(longitude) > 37) & (abs(longitude) <= 53):\n",
+    "        Lz = 45.0\n",
+    "    elif (abs(longitude) > 53) & (abs(longitude) <= 67):\n",
+    "        Lz = 60.0\n",
+    "    elif (abs(longitude) > 67) & (abs(longitude) <= 83):\n",
+    "        Lz = 75.0\n",
+    "    elif (abs(longitude) > 83) & (abs(longitude) <= 97):\n",
+    "        Lz = 90.0\n",
+    "    elif (abs(longitude) > 97) & (abs(longitude) <= 113):\n",
+    "        Lz = 105.0\n",
+    "    elif (abs(longitude) > 113) & (abs(longitude) <= 127):\n",
+    "        Lz = 120.0\n",
     "\n",
-    "    \n",
-    "    #Lm longitude of the measurement site [degrees west of Greenwich],\n",
+    "    # Lm longitude of the measurement site [degrees west of Greenwich],\n",
     "    Lm = abs(longitude)\n",
-    "    b = 2*np.pi*(jday-81)/364.\n",
-    "    #Sc = The seasonal correction for solar time is\n",
-    "    Sc = 0.1645*np.sin(2.*b) - 0.1255*np.cos(b) - 0.025*np.sin(b) \n",
-    "    #w is solar time angle at midpoint of the period\n",
-    "    w = np.pi/12.*((t+0.0667*(Lz-Lm)+Sc)-12.)    \n",
-    "    #w1 is the solar time angle at the beginning of the period\n",
-    "    #w2 is the solar time angle at the end of the period\n",
+    "    b = 2 * np.pi * (jday - 81) / 364.0\n",
+    "    # Sc = The seasonal correction for solar time is\n",
+    "    Sc = 0.1645 * np.sin(2.0 * b) - 0.1255 * np.cos(b) - 0.025 * np.sin(b)\n",
+    "    # w is solar time angle at midpoint of the period\n",
+    "    w = np.pi / 12.0 * ((t + 0.0667 * (Lz - Lm) + Sc) - 12.0)\n",
+    "    # w1 is the solar time angle at the beginning of the period\n",
+    "    # w2 is the solar time angle at the end of the period\n",
     "    w1 = w - (np.pi * t1 / 24.0)\n",
     "    w2 = w + (np.pi * t1 / 24.0)\n",
-    "    # w1 and w2 should be within the range of -s to +s(daylight period) (-s is the sunrise hour angle) \n",
+    "    # w1 and w2 should be within the range of -s to +s(daylight period) (-s is the sunrise hour angle)\n",
     "    w1 = np.where((w1 < -s), -s, w1)\n",
     "    w2 = np.where((w2 < -s), -s, w2)\n",
     "    w1 = np.where((w1 > s), s, w1)\n",
     "    w2 = np.where((w2 > s), s, w2)\n",
-    "    #inverse relative distance Earth-Sun\n",
-    "    dr = 1.0 + 0.033*np.cos(2*np.pi*jday/365.)\n",
-    "    #Ra is Extraterrestrial radiation for hourly or shorter periods --MJ m-2 hour-1\n",
-    "    #59.04 is 12*60*Gsc  where Gsc=0.0820MJ m-2 min-1 (12 is used for hourly\n",
-    "    ra = 59.04/np.pi*dr*((w2-w1)*np.sin(lrad)*np.sin(dec) + np.cos(lrad)*np.cos(dec)*(np.sin(w2)-np.sin(w1)))\n",
+    "    # inverse relative distance Earth-Sun\n",
+    "    dr = 1.0 + 0.033 * np.cos(2 * np.pi * jday / 365.0)\n",
+    "    # Ra is Extraterrestrial radiation for hourly or shorter periods --MJ m-2 hour-1\n",
+    "    # 59.04 is 12*60*Gsc  where Gsc=0.0820MJ m-2 min-1 (12 is used for hourly\n",
+    "    ra = (\n",
+    "        59.04\n",
+    "        / np.pi\n",
+    "        * dr\n",
+    "        * (\n",
+    "            (w2 - w1) * np.sin(lrad) * np.sin(dec)\n",
+    "            + np.cos(lrad) * np.cos(dec) * (np.sin(w2) - np.sin(w1))\n",
+    "        )\n",
+    "    )\n",
     "\n",
-    "\n",
-    "    #N is Daylight hours\n",
-    "    N = 24.*s/np.pi\n",
-    "    a_s = 0.25 # recommended value\n",
-    "    b_s = 0.50 # recommended value\n",
-    "    rso = (a_s+b_s*(N/N))*ra # for near sea level\n",
+    "    # N is Daylight hours\n",
+    "    N = 24.0 * s / np.pi\n",
+    "    a_s = 0.25  # recommended value\n",
+    "    b_s = 0.50  # recommended value\n",
+    "    rso = (a_s + b_s * (N / N)) * ra  # for near sea level\n",
     "\n",
     "    return rso"
    ]
@@ -151,10 +157,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Potential hourly radiation\n",
-    "data_obs_hourly['Rso_MJm2/hr'] = hourly_rso(latitude=latitude,longitude=longitude,jday=data_obs_hourly.index.dayofyear.values,jhour=data_obs_hourly.index.hour.values)\n",
-    "data_obs_hourly['Rso_W/m2'] = data_obs_hourly['Rso_MJm2/hr']/0.0036\n",
-    "data_obs_hourly['Rso_W/m2'].to_csv('data_hourly_rad_pot.csv')"
+    "# Potential hourly radiation\n",
+    "data_obs_hourly[\"Rso_MJm2/hr\"] = hourly_rso(\n",
+    "    latitude=latitude,\n",
+    "    longitude=longitude,\n",
+    "    jday=data_obs_hourly.index.dayofyear.values,\n",
+    "    jhour=data_obs_hourly.index.hour.values,\n",
+    ")\n",
+    "data_obs_hourly[\"Rso_W/m2\"] = data_obs_hourly[\"Rso_MJm2/hr\"] / 0.0036\n",
+    "data_obs_hourly[\"Rso_W/m2\"].to_csv(\"data_hourly_rad_pot.csv\")"
    ]
   },
   {
@@ -781,7 +792,9 @@
     "    a0=0,\n",
     "    a1=1,\n",
     ")\n",
-    "tdewdf_mettoolbox[\"dewpoint_regression_preserve\"] = met.disaggregate.dewpoint_temperature(\n",
+    "tdewdf_mettoolbox[\n",
+    "    \"dewpoint_regression_preserve\"\n",
+    "] = met.disaggregate.dewpoint_temperature(\n",
     "    input_ts=data_obs_daily,\n",
     "    method=\"dewpoint_regression\",\n",
     "    temp_min_col=2,\n",
@@ -802,7 +815,9 @@
     "    a1=1,\n",
     "    kr=6,\n",
     ")\n",
-    "tdewdf_mettoolbox[\"linear_dewpoint_variation_preserve\"] = met.disaggregate.dewpoint_temperature(\n",
+    "tdewdf_mettoolbox[\n",
+    "    \"linear_dewpoint_variation_preserve\"\n",
+    "] = met.disaggregate.dewpoint_temperature(\n",
     "    input_ts=data_obs_daily,\n",
     "    method=\"linear_dewpoint_variation\",\n",
     "    temp_min_col=2,\n",
@@ -822,7 +837,9 @@
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     "    hourly_precip_hum=\"data_obs_hourly_precip_hum.csv\",\n",
     ")\n",
-    "tdewdf_mettoolbox[\"month_hour_precip_mean_preserve\"] = met.disaggregate.dewpoint_temperature(\n",
+    "tdewdf_mettoolbox[\n",
+    "    \"month_hour_precip_mean_preserve\"\n",
+    "] = met.disaggregate.dewpoint_temperature(\n",
     "    input_ts=data_obs_daily,\n",
     "    method=\"month_hour_precip_mean\",\n",
     "    precip_col=4,\n",
@@ -868,43 +885,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radiationdf_mettoolbox=pd.DataFrame()\n",
-    "radiationdf_mettoolbox['mean_course'] = met.disaggregate.radiation(\n",
-    "    input_ts=data_obs_daily/24,\n",
-    "    method='mean_course',\n",
+    "radiationdf_mettoolbox = pd.DataFrame()\n",
+    "radiationdf_mettoolbox[\"mean_course\"] = met.disaggregate.radiation(\n",
+    "    input_ts=data_obs_daily / 24,\n",
+    "    method=\"mean_course\",\n",
     "    glob_swr_col=5,\n",
-    "    source_units=['W/m**2'],\n",
+    "    source_units=[\"W/m**2\"],\n",
     "    hourly_rad=\"data_obs_hourly_glob.csv\",\n",
     ")\n",
-    "radiationdf_mettoolbox['pot_rad'] = met.disaggregate.radiation(\n",
-    "    input_ts=data_obs_daily/24,\n",
-    "    method='pot_rad',\n",
+    "radiationdf_mettoolbox[\"pot_rad\"] = met.disaggregate.radiation(\n",
+    "    input_ts=data_obs_daily / 24,\n",
+    "    method=\"pot_rad\",\n",
     "    glob_swr_col=5,\n",
-    "    source_units=['W/m**2'],\n",
+    "    source_units=[\"W/m**2\"],\n",
     "    lon=longitude,\n",
     "    lat=latitude,\n",
-    "    pot_rad=\"data_hourly_rad_pot.csv\"\n",
+    "    pot_rad=\"data_hourly_rad_pot.csv\",\n",
     ")\n",
-    "radiationdf_mettoolbox['pot_rad_via_bc'] = met.disaggregate.radiation(\n",
+    "radiationdf_mettoolbox[\"pot_rad_via_bc\"] = met.disaggregate.radiation(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='pot_rad_via_bc',\n",
+    "    method=\"pot_rad_via_bc\",\n",
     "    temp_min_col=2,\n",
-    "    temp_max_col=3, \n",
+    "    temp_max_col=3,\n",
     "    bristcamp_a=0.75,\n",
-    "    bristcamp_c=4.4,    \n",
-    "    source_units=['W/m**2','W/m**2'],\n",
-    "    pot_rad=\"data_hourly_rad_pot.csv\"\n",
+    "    bristcamp_c=4.4,\n",
+    "    source_units=[\"W/m**2\", \"W/m**2\"],\n",
+    "    pot_rad=\"data_hourly_rad_pot.csv\",\n",
     ")\n",
-    "radiationdf_mettoolbox['pot_rad_via_ssd'] = met.disaggregate.radiation(\n",
+    "radiationdf_mettoolbox[\"pot_rad_via_ssd\"] = met.disaggregate.radiation(\n",
     "    input_ts=data_obs_daily,\n",
-    "    method='pot_rad_via_ssd',\n",
+    "    method=\"pot_rad_via_ssd\",\n",
     "    ssd_col=10,\n",
-    "    source_units=['W/m**2'],\n",
+    "    source_units=[\"W/m**2\"],\n",
     "    lon=longitude,\n",
     "    lat=latitude,\n",
-    "    angstr_a=.25,\n",
-    "    angstr_b=.5,\n",
-    "    pot_rad=\"data_hourly_rad_pot.csv\"\n",
+    "    angstr_a=0.25,\n",
+    "    angstr_b=0.5,\n",
+    "    pot_rad=\"data_hourly_rad_pot.csv\",\n",
     ")"
    ]
   },
@@ -937,11 +954,11 @@
    ],
    "source": [
     "methods = radiationdf_mettoolbox.columns\n",
-    "plt.plot(data_obs_hourly[\"glob\"].loc[plot_period],'-',linewidth=3)\n",
+    "plt.plot(data_obs_hourly[\"glob\"].loc[plot_period], \"-\", linewidth=3)\n",
     "\n",
     "for method in methods:\n",
     "    plt.plot(radiationdf_mettoolbox[method].dropna().loc[plot_period], \":\")\n",
-    "plt.legend(['Observation']+list(methods),bbox_to_anchor=(1, 1))"
+    "plt.legend([\"Observation\"] + list(methods), bbox_to_anchor=(1, 1))"
    ]
   },
   {
