style: black is the new black

--- a/tests/Disaggregation_test.ipynb
+++ b/tests/Disaggregation_test.ipynb
@@ -792,17 +792,17 @@
     "    a0=0,\n",
     "    a1=1,\n",
     ")\n",
-    "tdewdf_mettoolbox[\n",
-    "    \"dewpoint_regression_preserve\"\n",
-    "] = met.disaggregate.dewpoint_temperature(\n",
-    "    input_ts=data_obs_daily,\n",
-    "    method=\"dewpoint_regression\",\n",
-    "    temp_min_col=2,\n",
-    "    source_units=[\"degK\", \"degK\"],\n",
-    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
-    "    a0=0,\n",
-    "    a1=1,\n",
-    "    preserve_daily_mean=6,\n",
+    "tdewdf_mettoolbox[\"dewpoint_regression_preserve\"] = (\n",
+    "    met.disaggregate.dewpoint_temperature(\n",
+    "        input_ts=data_obs_daily,\n",
+    "        method=\"dewpoint_regression\",\n",
+    "        temp_min_col=2,\n",
+    "        source_units=[\"degK\", \"degK\"],\n",
+    "        hourly_temp=\"data_obs_hourly_temp.csv\",\n",
+    "        a0=0,\n",
+    "        a1=1,\n",
+    "        preserve_daily_mean=6,\n",
+    "    )\n",
     ")\n",
     "tdewdf_mettoolbox[\"linear_dewpoint_variation\"] = met.disaggregate.dewpoint_temperature(\n",
     "    input_ts=data_obs_daily,\n",
@@ -815,18 +815,18 @@
     "    a1=1,\n",
     "    kr=6,\n",
     ")\n",
-    "tdewdf_mettoolbox[\n",
-    "    \"linear_dewpoint_variation_preserve\"\n",
-    "] = met.disaggregate.dewpoint_temperature(\n",
-    "    input_ts=data_obs_daily,\n",
-    "    method=\"linear_dewpoint_variation\",\n",
-    "    temp_min_col=2,\n",
-    "    source_units=[\"degK\", \"degK\"],\n",
-    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
-    "    a0=0,\n",
-    "    a1=1,\n",
-    "    kr=6,\n",
-    "    preserve_daily_mean=6,\n",
+    "tdewdf_mettoolbox[\"linear_dewpoint_variation_preserve\"] = (\n",
+    "    met.disaggregate.dewpoint_temperature(\n",
+    "        input_ts=data_obs_daily,\n",
+    "        method=\"linear_dewpoint_variation\",\n",
+    "        temp_min_col=2,\n",
+    "        source_units=[\"degK\", \"degK\"],\n",
+    "        hourly_temp=\"data_obs_hourly_temp.csv\",\n",
+    "        a0=0,\n",
+    "        a1=1,\n",
+    "        kr=6,\n",
+    "        preserve_daily_mean=6,\n",
+    "    )\n",
     ")\n",
     "\n",
     "tdewdf_mettoolbox[\"month_hour_precip_mean\"] = met.disaggregate.dewpoint_temperature(\n",
@@ -837,16 +837,16 @@
     "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
     "    hourly_precip_hum=\"data_obs_hourly_precip_hum.csv\",\n",
     ")\n",
-    "tdewdf_mettoolbox[\n",
-    "    \"month_hour_precip_mean_preserve\"\n",
-    "] = met.disaggregate.dewpoint_temperature(\n",
-    "    input_ts=data_obs_daily,\n",
-    "    method=\"month_hour_precip_mean\",\n",
-    "    precip_col=4,\n",
-    "    source_units=[\"degK\", \"degK\"],\n",
-    "    hourly_temp=\"data_obs_hourly_temp.csv\",\n",
-    "    hourly_precip_hum=\"data_obs_hourly_precip_hum.csv\",\n",
-    "    preserve_daily_mean=6,\n",
+    "tdewdf_mettoolbox[\"month_hour_precip_mean_preserve\"] = (\n",
+    "    met.disaggregate.dewpoint_temperature(\n",
+    "        input_ts=data_obs_daily,\n",
+    "        method=\"month_hour_precip_mean\",\n",
+    "        precip_col=4,\n",
+    "        source_units=[\"degK\", \"degK\"],\n",
+    "        hourly_temp=\"data_obs_hourly_temp.csv\",\n",
+    "        hourly_precip_hum=\"data_obs_hourly_precip_hum.csv\",\n",
+    "        preserve_daily_mean=6,\n",
+    "    )\n",
     ")\n",
     "\n",
     "\n",
